extra: rro_overlays: Beauty-ify manifests
Change-Id: I2ad173c31c92cded447859936f67f21f2bb84c19

--- a/rro_overlays/BromiteWebViewOverlay/AndroidManifest.xml
+++ b/rro_overlays/BromiteWebViewOverlay/AndroidManifest.xml
@@ -6,7 +6,9 @@
      SPDX-License-Identifier: Apache-2.0
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="android.bromitewebviews.custom">
+    package="android.bromitewebviews.custom"
+    android:versionCode="1"
+    android:versionName="1.0">
 
     <overlay
         android:isStatic="true"
