--- a/rro_overlays/LineageSettingsOverlay/AndroidManifest.xml
+++ b/rro_overlays/LineageSettingsOverlay/AndroidManifest.xml
@@ -8,5 +8,9 @@
     package="org.lineageos.lineagesettings.custom"
     android:versionCode="1"
     android:versionName="1.0">
-    <overlay android:targetPackage="org.lineageos.lineagesettings" android:priority="0" android:isStatic="true" />
+
+    <overlay
+        android:isStatic="true"
+        android:priority="0"
+        android:targetPackage="org.lineageos.lineagesettings" />
 </manifest>
