--- a/rootdir/etc/init.debugrom.rc
+++ b/rootdir/etc/init.debugrom.rc
@@ -4,3 +4,20 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
+service logcat_romboot /system/bin/logcat -b all -D -f /cache/bootlogs/logcat_boot.txt
+    class main
+    user root
+    group root system
+    disabled
+    oneshot
+
+on post-fs-data
+    # Cleanup boot logs
+    rm /cache/bootlogs
+    mkdir /cache/bootlogs 0755 system system
+    # Grab boot logs
+    start logcat_romboot
+
+on property:sys.boot_completed=1
+    # Save boot logs
+    stop logcat_romboot
