extra: rootdir: Exec rm instead
Command 'rm /cache/bootlogs' action=post-fs-data (/system/etc/init/init.debugrom.rc:38) took 0ms and failed: unlink() failed: Is a directory

Change-Id: Id09439ab4d4ea191914bb6b97fb24d4610e58899

--- a/rootdir/etc/init.debugrom.rc
+++ b/rootdir/etc/init.debugrom.rc
@@ -35,7 +35,7 @@ service logcat-kernel_romboot /system/bin/logcat -b kernel -D -f /cache/bootlogs
 
 on post-fs-data
     # Cleanup boot logs
-    rm /cache/bootlogs
+    exec - system system -- /bin/rm -rf /cache/bootlogs
     mkdir /cache/bootlogs 0755 system system
     # Grab boot logs
     start logcat_romboot
