extra: rootdir: Remove bootlogs folder instead
Change-Id: Id8f31b4896ff77845150473bdc9b9352f2016256

--- a/rootdir/etc/init.debugrom.rc
+++ b/rootdir/etc/init.debugrom.rc
@@ -35,11 +35,8 @@ service logcatd-kernel_romboot /system/bin/logcatd -b kernel -D -f /data/misc/lo
 
 on post-fs-data
     # Cleanup boot logs
+    exec - system root -- /bin/rm -rf /data/misc/logd/bootlogs
     mkdir /data/misc/logd/bootlogs 0750 logd log
-    rm /data/misc/logd/bootlogs/logcatd_romboot.log
-    rm /data/misc/logd/bootlogs/logcatd-radio_romboot.log
-    rm /data/misc/logd/bootlogs/logcatd-crash_romboot.log
-    rm /data/misc/logd/bootlogs/logcatd-kernel_romboot.log
     # Grab boot logs
     start logcatd_romboot
     start logcatd-radio_romboot
