extra: Correct copyright headers
Change-Id: I7d480ad31fb57ea000658f345154a6516e70390d

--- a/rro_overlays/BromiteWebViewOverlay/AndroidManifest.xml
+++ b/rro_overlays/BromiteWebViewOverlay/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
      Copyright (C) 2022 StatiX
-     Copyright (C) 2022 The LineageOS Project
+     Copyright (C) 2022 Giovanni Ricca
 
      SPDX-License-Identifier: Apache-2.0
 -->
