extra: Call vendor/extra/priv
Change-Id: I886fd72aafede9a52639fe830e4e72fdb2fbd494

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Ignore git patches
 *.patch
 
-# Ignore external path, these are synced separately
+# Ignore paths, these are synced separately
 external/*
+priv/
