--- a/rro_overlays/RippleSystemUIOverlay/AndroidManifest.xml
+++ b/rro_overlays/RippleSystemUIOverlay/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <overlay
         android:isStatic="true"
         android:priority="850"
-        android:requiredSystemPropertyName="ro.board.platform"
-        android:requiredSystemPropertyValue="msm8953"
+        android:requiredSystemPropertyName="ro.config.avoid_gfx_accel"
+        android:requiredSystemPropertyValue="true"
         android:targetPackage="com.android.systemui" />
 </manifest>
