tools: releases: Ditch `dotenv`
Change-Id: I964e07dc67a9b0171f648131b2cff9e151ad313c

--- a/tools/releases/.gitignore
+++ b/tools/releases/.gitignore
@@ -1,3 +1,11 @@
+# Ignore python cache
+__pycache__/
+
+# Ignore LineageOS_* repos
 LineageOS_*
+
+# Ignore Assets
 assets/
-/.env
+
+# Ignore GitHub key
+config.py
