--- a/rootdir/etc/init.safailnet.rc
+++ b/rootdir/etc/init.safailnet.rc
@@ -2,7 +2,7 @@
 # Inspired in magisk source code, by topjohnwu
 # Ported to ramdisk by jhenrique09
 
-on boot
+on boot && property:ro.boot.selinux=permissive
     # selinux nodes, hide permissive state
     chmod 0640 /sys/fs/selinux/enforce
     chmod 0440 /sys/fs/selinux/policy
