--- a/rro_overlays/LineageUpdaterOverlay/AndroidManifest.xml
+++ b/rro_overlays/LineageUpdaterOverlay/AndroidManifest.xml
@@ -5,7 +5,7 @@
      SPDX-License-Identifier: Apache-2.0
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.lineageos.updater.custom"
+    package="org.lineageos.overlay.updater"
     android:versionCode="1"
     android:versionName="1.0">
 
